--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@
     border: none;
     color: #222738;
     border-radius: 20px;
+    box-shadow: 0px 0px 5px red;
     font-weight: 800;
     transform: rotate(270deg);
     cursor: pointer;
